# ormx

./: README.md  TODO.tasks
example/: Cargo.toml
example/src/: main.rs  query2.rs
ormx/: Cargo.toml
ormx-macros/: Cargo.toml
ormx-macros/src/: attrs.rs  lib.rs
ormx-macros/src/backend/: mod.rs
ormx-macros/src/backend/common/: mod.rs  table.rs
ormx-macros/src/backend/mysql/: insert.rs  mod.rs
ormx-macros/src/backend/postgres/: insert.rs  mod.rs
ormx-macros/src/table/: mod.rs  parse.rs
ormx/src/: lib.rs
ormx/src/args/: hints.rs  mod.rs  op.rs
