[package]
name = "example"
version = "0.1.0"
authors = ["moritz"]
edition = "2018"

[dependencies]
ormx = { path = "../ormx", features = ["mysql"] }
tokio = { version = "1.1", features = ["full"] }
anyhow = "1"
dotenv = "0.15"
chrono = "0.4"
simple_logger = "1"
log = "0.4"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "uuid", "mysql", "runtime-tokio-rustls", "chrono", "offline"]
