[package]
name = "ormx-macros"
version = "0.5.0"
authors = ["moritz"]
edition = "2018"
description = "lightweight procedural macros bringing orm-like features to sqlx"
homepage = "https://github.com/NyxCode/ormx"
license = "MIT"

[lib]
proc-macro = true

[features]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]

[dependencies]
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
once_cell = "1"
proc-macro-error = "1"
sqlx = { version = "0.5", default-features = false, features = ["any"] }
